fix: update LeftSidebar styles for improved visibility and adjust sidebar positioning for better layout

--- a/src/config/globals.css
+++ b/src/config/globals.css
@@ -38,13 +38,13 @@
   @apply mb-1 block rounded-md no-underline hover:bg-amber-200 dark:hover:bg-amber-800;
 }
 @utility sidebar-md {
-  @apply fixed top-[10%] right-0 max-h-[80%] w-[16%] scroll-mb-2 overflow-scroll p-3;
+  @apply fixed top-[8%] right-0 max-h-[80%] w-[16%] scroll-mb-2 overflow-scroll p-3;
 }
 @utility leftsidebar {
   @apply mb-1 block rounded-md no-underline;
 }
 @utility leftsidebar-md {
-  @apply fixed top-[10%] left-2 max-h-[80%] w-[20%] scroll-mb-2 overflow-scroll p-3;
+  @apply fixed top-[8%] left-2 max-h-[80%] w-[20%] scroll-mb-2 overflow-scroll p-3;
 }
 @utility text-underlined {
   @apply text-text-foreground inline underline decoration-yellow-800 decoration-wavy underline-offset-[0.2rem] dark:decoration-yellow-400;
